[tool.poetry]
name = "lsh"
version = "0.1.3"
description = ""
authors = ["Mohammed Akmal Miah <mohammedmiah67890@gmail.com>"]
readme = "README.md"
packages = [{ include = "lsh" }]
include = [{ path = "lsh/**/*.so", format = "wheel" }]


[tool.poetry.dependencies]
python = "^3.10"
cython = "^0.29.34"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[tool.poetry.build]
generate-setup-file = false
script = 'build.py'

[build-system]
requires = ["poetry-core", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"