[tool.poetry]
name = "lsh"
version = "0.1.0"
description = ""
authors = ["Mohammed Akmal Miah <mohammedmiah67890@gmail.com>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
cython = ">=0.24.1"


[build-system]
requires = ["poetry>=0.12", "setuptools", "numpy", "cython"]
build-backend = "poetry.masonry.api"